Add AI Mode explainer section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,30 @@
           </div>
         </details>
 
-        <div class="status reveal" role="status" aria-live="polite" id="status" data-delay="4"></div>
+        <details class="settings info reveal" data-delay="4">
+          <summary>What is Gemini AI Mode?</summary>
+          <div class="settings-body">
+            <p>
+              Google describes AI Mode as a new generative AI experiment in
+              Search. It’s designed to help people explore queries with more
+              nuance and constraints, using deep information retrieval to point
+              you to helpful web content.
+            </p>
+            <p>
+              It’s still experimental, rolling out as an opt-in experience in
+              Labs. When confidence is low, AI Mode may fall back to standard
+              web results instead of an AI response.
+            </p>
+            <p class="hint">
+              Source:
+              <a href="https://blog.google/products/search/ai-mode-search/" target="_blank" rel="noreferrer">
+                Expanding AI Overviews and introducing AI Mode
+              </a>
+            </p>
+          </div>
+        </details>
+
+        <div class="status reveal" role="status" aria-live="polite" id="status" data-delay="5"></div>
       </section>
     </main>
 
