Make quick chips add query add-ons

--- a/index.html
+++ b/index.html
@@ -47,15 +47,18 @@
           </div>
         </form>
 
-        <div class="chips reveal" aria-label="Quick examples" data-delay="2">
-          <button type="button" class="chip" data-query="Explain the water cycle like I'm 10">
-            Water cycle
+        <div class="chips reveal" aria-label="Add-ons" data-delay="2">
+          <button type="button" class="chip" data-addon="demystify">
+            Demystify
           </button>
-          <button type="button" class="chip" data-query="Plan a 2-day Tokyo food crawl">
-            Tokyo food crawl
+          <button type="button" class="chip" data-addon="explain like I'm five">
+            Explain like I'm five
           </button>
-          <button type="button" class="chip" data-query="Summarize today's tech headlines">
-            Tech headlines
+          <button type="button" class="chip" data-addon="explain like I'm 10">
+            Explain like I'm 10
+          </button>
+          <button type="button" class="chip" data-addon="explain using ">
+            Explain using...
           </button>
         </div>
 
